MODREQMED-10 Mediated request CRUD - additional fields (#11)
* MODREQMED-10 Initial implementation

* MODREQMED-10 Add equals method to identifier

* MODREQMED-10 Refactor mapper

* MODREQMED-10 Add index, remove embedded postgres

* MODREQMED-10 Split initializers

* MODREQMED-10 Remove kafka dependencies

* MODREQMED-10 Create custom JDBC types for enums

* MODREQMED-10 Add default values

* MODREQMED-10 Add full call number field

* MODREQMED-10 Fix item status, metadata user IDs

* MODREQMED-10 Add confirmed request ID

* MODREQMED-10 Add identifier tests

* MODREQMED-10 Address Sonar complaints

* MODREQMED-10 Add more identifier tests

* MODREQMED-10 Refactor mapper, add more tests

* MODREQMED-10 Refactor extractor

* MODREQMED-10 Fix Sonar code duplication issue

* MODREQMED-10 Suppress warnings

* MODREQMED-10 Add Sonar exclusion

* MODREQMED-10 Use expressions

* Revert "MODREQMED-10 Use expressions"

This reverts commit c423bc76c0db46d98602dfc589db5a6a2adf00b7.

* MODREQMED-10 Add comma to exclusions

* MODREQMED-10 Add null check

--- a/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
+++ b/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
@@ -23,23 +23,218 @@ MediatedRequest:
     requesterId:
       description: ID of the requesting patron (user)
       $ref: 'uuid.yaml'
+    requester:
+      description: Copy of some requester data
+      type: object
+      properties:
+        firstName:
+          description: First name of the requester
+          type: string
+        lastName:
+          description: Last name of the requester
+          type: string
+        middleName:
+          description: Middle name of the requester
+          type: string
+        barcode:
+          description: Barcode of the requester
+          type: string
+        patronGroupId:
+          description: Patron group ID of the requester
+          $ref: 'uuid.yaml'
+        patronGroup:
+          description: Patron group of the requester
+          type: object
+          properties:
+            id:
+              description: Patron group ID
+              $ref: 'uuid.yaml'
+            group:
+              description: Patron group name
+              type: string
+            desc:
+              description: Patron group description
+              type: string
+      additionalProperties: false
     proxyUserId:
       description: ID of the proxy user
       $ref: 'uuid.yaml'
+    proxy:
+      description: Copy of some proxy patron data
+      type: object
+      properties:
+        firstName:
+          description: First name of the proxy patron
+          type: string
+        lastName:
+          description: Last name of the proxy patron
+          type: string
+        middleName:
+          description: Middle name of the proxy patron
+          type: string
+        barcode:
+          description: Barcode of the proxy patron
+          type: string
+        patronGroupId:
+          description: Patron group ID of the proxy patron
+          $ref: 'uuid.yaml'
+        patronGroup:
+          description: Patron group of the proxy patron
+          type: object
+          properties:
+            id:
+              description: Patron group ID
+              $ref: 'uuid.yaml'
+            group:
+              description: Patron group name
+              type: string
+            desc:
+              description: Patron group description
+              type: string
+      additionalProperties: false
     instanceId:
       description: ID of the instance
       $ref: 'uuid.yaml'
+    instance:
+      description: Copy of some instance data
+      type: object
+      properties:
+        title:
+          description: Title of the instance",
+          type: string
+        identifiers:
+          description: An extensible set of name-value pairs of identifiers associated with the resource
+          type: array
+          items:
+            type: object
+            properties:
+              identifierTypeId:
+                description: UUID of resource identifier type (e.g. ISBN, ISSN, LCCN, CODEN, Locally defined identifiers)
+                $ref: 'uuid.yaml'
+              value:
+                description: Resource identifier value
+                type: string
+            additionalProperties: false
+            required:
+              - identifierTypeId
+              - value
+        contributorNames:
+          description: A list of contributor names
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                description: Contributor name
+                type: string
+            additionalProperties: false
+        publication:
+          description: Publication information
+          type: array
+          items:
+            type: object
+            properties:
+              publisher:
+                description: Name of the publisher
+                type: string
+              place:
+                description: Place of publication
+                type: string
+              dateOfPublication:
+                description: Date of publication
+                type: string
+              role:
+                description: Role of the publisher
+                type: string
+            additionalProperties: false
+        editions:
+          description: The edition statement, imprint and other publication source information
+          type: array
+          items:
+            type: string
+      additionalProperties: false
+      required:
+        - title
+        - identifiers
     holdingsRecordId:
       description: ID of the holdings record
       $ref: 'uuid.yaml'
     itemId:
       description: ID of the item
       $ref: 'uuid.yaml'
+    item:
+      description: Copy of some item data
+      type: object
+      properties:
+        barcode:
+          description: Barcode of the item
+          type: string
+        location:
+          description: Effective location of the item
+          type: object
+          properties:
+            name:
+              description: Name of the location
+              type: string
+            libraryName:
+              description: Library name of the location
+              type: string
+            code:
+              description: Code of the location
+              type: string
+          additionalProperties: false
+        enumeration:
+          description: Enumeration of the item
+          type: string
+        volume:
+          description: Volume of the item
+          type: string
+        chronology:
+          description: Chronology of the item
+          type: string
+        displaySummary:
+          description: Display summary of the item
+          type: string
+        status:
+          description: Status of the item
+          type: string
+        callNumber:
+          description: Call number of the item
+          type: string
+        callNumberComponents:
+          description: Components of the item's call number
+          type: object
+          properties:
+            callNumber:
+              description: Call number of the item
+              type: string
+            prefix:
+              description: Prefix of the item's call number
+              type: string
+            suffix:
+              description: Suffix of the item's call number
+              type: string
+          additionalProperties: false
+        copyNumber:
+          description: Copy number of the item
+          type: string
+      additionalProperties: false
+    mediatedWorkflow:
+      description: Mediated workflow that mediated request follows
+      type: string
+    mediatedRequestStatus:
+      description: Status of the mediated request
+      type: string
+      enum: [ 'New', 'Open', 'Closed']
+    mediatedRequestStep:
+      description: Step of the mediated request in mediated workflow
+      type: string
     status:
       description: Status of the mediated request
       type: string
-      enum: [ 'Open - Awaiting pickup', 'Open - In progress', 'Open - In transit', 'Open - Item arrived',
-        'Closed - Cancelled', 'Closed - Declined', 'Closed - Filled', 'New - Awaiting confirmation'
+      enum: [ 'New - Awaiting confirmation', 'Open - Not yet filled', 'Open - In transit 1',
+              'Open - Item arrived', 'Open - In transit 2','Open - Awaiting pickup',
+              'Closed - Cancelled', 'Closed - Declined', 'Closed - Filled'
       ]
     cancellationReasonId:
       description: ID of the cancellation reason
@@ -64,6 +259,96 @@ MediatedRequest:
     deliveryAddressTypeId:
       description: ID of the delivery address type
       $ref: 'uuid.yaml'
+    deliveryAddress:
+      description: Delivery address
+      type: object
+      properties:
+        addressTypeId:
+          description: ID of the delivery address type
+          type: string
+        addressLine1:
+          description: Address line 1
+          type: string
+        addressLine2:
+          description: Address line 2
+          type: string
+        city:
+          description: City
+          type: string
+        region:
+          description: Region
+          type: string
+        postalCode:
+          description: Postal code
+          type: string
+        countryId:
+          description: Country ID
+          type: string
+      additionalProperties: false
     pickupServicePointId:
       description: ID of the pickup service point
       $ref: 'uuid.yaml'
+    pickupServicePoint:
+      description: Pickup service point
+      type: object
+      properties:
+        name:
+          description: Pickup service point name
+          type: string
+        code:
+          description: Pickup service point code
+          type: string
+        discoveryDisplayName:
+          description: Pickup service point discovery display name
+          type: string
+        description:
+          description: Pickup service point description
+          type: string
+        shelvingLagTime:
+          description: Pickup service point description
+          type: integer
+        pickupLocation:
+          description: Whether pickup service point is a pickup location
+          type: boolean
+      additionalProperties: false
+    confirmedRequestId:
+      description: Confirmed circulation request ID
+      $ref: 'uuid.yaml'
+    searchIndex:
+      description: Request fields used for search
+      type: object
+      properties:
+        callNumberComponents:
+          description: Effective call number components
+          type: object
+          properties:
+            callNumber:
+              description: Effective Call Number is an identifier assigned to an item or its holding and associated with the item
+              type: string
+            prefix:
+              description: Effective Call Number Prefix is the prefix of the identifier assigned to an item or its holding and associated with the item
+              type: string
+            suffix:
+              description: Effective Call Number Suffix is the suffix of the identifier assigned to an item or its holding and associated with the item
+              type: string
+          additionalProperties: false
+        shelvingOrder:
+          description: A system generated normalization of the call number that allows for call number sorting in reports and search results
+          type: string
+        pickupServicePointName:
+          description: The name of the request pickup service point
+          type: string
+      additionalProperties: false
+    metadata:
+      description: Mediated request metadata
+      type: object
+      $ref: 'metadata.json'
+  additionalProperties: false
+  required:
+    - requestLevel
+    - requestType
+    - requestDate
+    - requesterId
+    - instanceId
+    - status
+    - fulfillmentPreference
