--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-backend-testing</artifactId>
-      <version>1.5.5-SNAPSHOT</version>
+      <version>1.5.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
