--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
   <dependencies>
     <dependency>
       <groupId>org.folio</groupId>
+      <artifactId>cql2pgjson</artifactId>
+      <version>35.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
       <artifactId>folio-spring-base</artifactId>
       <version>${folio-spring-base.version}</version>
     </dependency>
