--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <!-- runtime dependencies -->
     <folio-spring-base.version>8.1.0</folio-spring-base.version>
-    <openapi-generator.version>7.8.0</openapi-generator.version>
+    <openapi-generator.version>7.3.0</openapi-generator.version>
     <mapstruct.version>1.5.3.Final</mapstruct.version>
 
     <!-- test dependencies -->
@@ -252,7 +252,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <inputSpecRootDirectory>${project.basedir}/src/main/resources/swagger.api</inputSpecRootDirectory>
+              <inputSpec>${project.basedir}/src/main/resources/swagger.api/requests-mediated.yaml</inputSpec>
               <output>${project.build.directory}/generated-sources</output>
               <generatorName>spring</generatorName>
               <modelPackage>${project.groupId}.mr.domain.dto</modelPackage>
@@ -269,6 +269,7 @@
                 <dateLibrary>java</dateLibrary>
                 <interfaceOnly>true</interfaceOnly>
                 <useSpringBoot3>true</useSpringBoot3>
+                <useTags>true</useTags>
                 <useTags>true</useTags>
               </configOptions>
             </configuration>
