MODREQMED-16: Create skeleton for a new endpoint - send item in transit (#16)
* MODREQMED-16: implementation

* MODREQMED-16: extracted 'request actions' logic

* MODREQMED-16: removed unused imports

* MODREQMED-16: separate interface in descriptor

* MODREQMED-16: refactored

* MODREQMED-16: refactored

* MODREQMED-16: refactored

* MODREQMED-16: refactored

* MODREQMED-16: increased open api version; merged all executions in one

* MODREQMED-16: replaced all to one file

* MODREQMED-16: refactored

* MODREQMED-16: fixed endpoints

* MODREQMED-16 Rename tags

---------

Co-authored-by: alexanderkurash <alexander.kurash@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,7 @@
                 <dateLibrary>java</dateLibrary>
                 <interfaceOnly>true</interfaceOnly>
                 <useSpringBoot3>true</useSpringBoot3>
+                <useTags>true</useTags>
               </configOptions>
             </configuration>
           </execution>
