MODREQMED-11: Extend mediated request with remote data (#17)
* MODREQMED-11 User, UserGroup, Instance clients

* MODREQMED-11 Fetch request details

* MODREQMED-11 Make clients non-final

* MODREQMED-11 Enable feign clients

* MODREQMED-11 Remove leading slash from client URLs

* MODREQMED-11 Extract MediatedRequestDetailsService

* MODREQMED-11 Add title and item barcode

* MODREQMED-11 Add identifiers

* MODREQMED-11 Populate metadata

* MODREQMED-11 Populate metadata

* MODREQMED-11 Split request details fetching

* MODREQMED-11 Split request details fetching

* MODREQMED-11 Split request details fetching

* MODREQMED-11 Split request details fetching

* MODREQMED-11 Split request details fetching

* MODREQMED-11 Get userId and username from token

* MODREQMED-11 Split logic for GET, POST and PUT

* MODREQMED-11 Fix bug

* MODREQMED-11 Fix bug

* MODREQMED-11 Remove empty objects

* MODREQMED-11 Remove empty objects

* MODREQMED-11 Complete overhaul

* MODREQMED-11 Fix test

* MODREQMED-11 Fix code smells

* MODREQMED-11 Fix code smells

* MODREQMED-11 Tests for MetadataService

* MODREQMED-11 Fix test

* MODREQMED-11 Add test with minimal data

* MODREQMED-11 Logging and refactoring

* MODREQMED-11 Minor fixes

* MODREQMED-11 Bring back liquibase changeset

* MODREQMED-11 Add support for delivery

* MODREQMED-11 Replace switch with if-else

* MODREQMED-11 Make MediatedRequestContext an inner record

* MODREQMED-11 Remove redundant permissions

* MODREQMED-11 Remove redundant permissions

* MODREQMED-11 Bulk fetching

* MODREQMED-11 Add schemas for responses

* MODREQMED-11 Refactoring

* Revert "MODREQMED-11 Refactoring"

This reverts commit 3e33acb57080f92453b2ff6727eb48a79285308d.

* Revert "MODREQMED-11 Add schemas for responses"

This reverts commit c4423c33ca0dfce8db3bd191f43cc82501dbd6f7.

* Revert "MODREQMED-11 Bulk fetching"

This reverts commit 9e182c9a8242176f7c9354

--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -169,6 +169,26 @@ components:
       $ref: 'schemas/sendItemInTransitRequest.yaml#/SendItemInTransitRequest'
     errorResponse:
       $ref: 'schemas/errors.json'
+    user:
+      $ref: 'schemas/users/user.json'
+    users:
+      $ref: 'schemas/users/users.json'
+    userGroup:
+      $ref: 'schemas/users/userGroup.json'
+    userGroups:
+      $ref: 'schemas/users/userGroups.json'
+    instance:
+      $ref: 'schemas/inventory/instance.json'
+    instances:
+      $ref: 'schemas/inventory/instances.json'
+    servicePoint:
+      $ref: 'schemas/inventory/servicePoint.json'
+    item:
+      $ref: 'schemas/inventory/item.json'
+    location:
+      $ref: 'schemas/inventory/location.json'
+    library:
+      $ref: 'schemas/inventory/library.json'
   parameters:
     mediatedRequestId:
       name: mediatedRequestId
