--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -131,13 +131,21 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/confirmItemArrivalRequest'
+              $ref: 'schemas/confirmItemArrivalRequest.yaml'
         required: true
       responses:
-        '204':
-          description: Successful operation, no content returned
+        '200':
+          description: Successful item arrival confirmation response
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas/confirmItemArrivalResponse.yaml'
+              example:
+                $ref: 'examples/confirmItemArrivalResponse.json'
         '400':
           $ref: '#/components/responses/badRequestResponse'
+        '404':
+          $ref: '#/components/responses/notFoundResponse'
         '500':
           $ref: '#/components/responses/internalServerErrorResponse'
   /requests-mediated/send-item-in-transit:
@@ -150,7 +158,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/sendItemInTransitRequest'
+              $ref: 'schemas/sendItemInTransitRequest.yaml'
         required: true
       responses:
         '204':
@@ -162,11 +170,7 @@ paths:
 components:
   schemas:
     mediatedRequest:
-      $ref: 'schemas/mediatedRequest.yaml#/MediatedRequest'
-    confirmItemArrivalRequest:
-      $ref: 'schemas/confirmItemArrivalRequest.yaml#/ConfirmItemArrivalRequest'
-    sendItemInTransitRequest:
-      $ref: 'schemas/sendItemInTransitRequest.yaml#/SendItemInTransitRequest'
+      $ref: 'schemas/mediatedRequest.yaml'
     errorResponse:
       $ref: 'schemas/errors.json'
     user:
@@ -227,7 +231,7 @@ components:
         content:
           application/json:
             schema:
-              $ref: 'schemas/mediatedRequest.yaml#/MediatedRequest'
+              $ref: 'schemas/mediatedRequest.yaml'
             examples:
               objectExample:
                 externalValue: 'examples/mediatedRequest.json'
@@ -236,7 +240,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: 'schemas/mediatedRequests.yaml#/MediatedRequests'
+            $ref: 'schemas/mediatedRequests.yaml'
           examples:
             objectExample:
               externalValue: 'examples/mediatedRequests.json'
