--- a/src/main/resources/swagger.api/schemas/confirmItemArrivalRequest.yaml
+++ b/src/main/resources/swagger.api/schemas/confirmItemArrivalRequest.yaml
@@ -1,8 +1,9 @@
-description: Confirm item arrival request
-type: object
-properties:
-  itemBarcode:
-    description: Barcode of the confirmed item
-    type: string
-required:
-  - itemBarcode
+ConfirmItemArrivalRequest:
+  description: Confirm item arrival request
+  type: object
+  properties:
+    itemBarcode:
+      description: Barcode of the confirmed item
+      type: string
+  required:
+    - itemBarcode
