--- a/src/main/resources/swagger.api/schemas/confirmItemArrivalResponse.yaml
+++ b/src/main/resources/swagger.api/schemas/confirmItemArrivalResponse.yaml
@@ -27,9 +27,35 @@ properties:
       barcode:
         description: Barcode of the requested item
         type: string
-      effectiveCallNumberString:
-        description: A system generated normalization of the call number that allows for call number sorting in reports and search results
+      enumeration:
+        description: Enumeration of the item
         type: string
+      volume:
+        description: Volume of the item
+        type: string
+      chronology:
+        description: Chronology of the item
+        type: string
+      displaySummary:
+        description: Display summary of the item
+        type: string
+      copyNumber:
+        description: Copy number of the item
+        type: string
+      callNumberComponents:
+        description: Components of the item's call number
+        type: object
+        properties:
+          callNumber:
+            description: Call number of the item
+            type: string
+          prefix:
+            description: Prefix of the item's call number
+            type: string
+          suffix:
+            description: Suffix of the item's call number
+            type: string
+        additionalProperties: false
   mediatedRequest:
     description: Information about affected mediated request
     type: object
@@ -49,9 +75,15 @@ properties:
         description: ID of the requester
         type: string
         format: uuid
-      name:
-        description: Name of the requester
-        type: string
       barcode:
         description: Barcode of the requester
+        type: string
+      firstName:
+        description: First name of the requester
+        type: string
+      lastName:
+        description: Last name of the requester
+        type: string
+      middleName:
+        description: Middle name of the requester
         type: string
