MODREQMED-21: Confirm item arrival (#18)
* MODREQMED-21 Confirm item arrival implementation

* MODREQMED-21 More tests

* MODREQMED-21 Bring back @Data annotation on MediatedRequestEntity

* MODREQMED-21 Remove redundant changes

* MODREQMED-21 Rename controller

* MODREQMED-21 Remove 'public' modifier from MediatedRequestActionsApiTest

* MODREQMED-21 Remove blank lines

* MODREQMED-21 Extend response with item data

* MODREQMED-21 Refactoring

* MODREQMED-21 Refactoring

* MODREQMED-21 Update error log message

--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -134,10 +134,18 @@ paths:
               $ref: '#/components/schemas/confirmItemArrivalRequest'
         required: true
       responses:
-        '204':
-          description: Successful operation, no content returned
+        '200':
+          description: Successful item arrival confirmation
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas/confirmItemArrivalResponse.yaml'
+              example:
+                $ref: 'examples/confirmItemArrivalResponse.json'
         '400':
           $ref: '#/components/responses/badRequestResponse'
+        '404':
+          $ref: '#/components/responses/notFoundResponse'
         '500':
           $ref: '#/components/responses/internalServerErrorResponse'
   /requests-mediated/send-item-in-transit:
