--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,8 +36,19 @@ folio:
   tenant:
     validation:
       enabled: true
+  secure-tenant-id: ${SECURE_TENANT_ID:}
   environment: ${ENV:folio}
   okapi-url: ${OKAPI_URL:http://okapi:9130}
+  system-user:
+    enabled: ${SYSTEM_USER_ENABLED:true}
+    username: ${SYSTEM_USER_NAME:mod-requests-mediated}
+    password: ${SYSTEM_USER_PASSWORD:mod-requests-mediated}
+    lastname: System
+    permissionsFilePath: permissions/mod-requests-mediated.csv
+  logging:
+    feign:
+      enabled: true
+      level: full
 management:
   endpoints:
     web:
