MODREQMED-18 Remove commented code, minor fixes

--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -131,7 +131,7 @@ paths:
         - $ref: '#/components/parameters/mediatedRequestId'
       responses:
         '204':
-          description: Mediated request successfully removed
+          description: Mediated request successfully confirmed
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '404':
