MODREQMED-18 Search items through mod-search

--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -228,6 +228,8 @@ components:
       $ref: 'schemas/ecs/ecsTlr.yaml'
     userTenantsResponse:
       $ref: 'schemas/users/getUserTenantsResponse.yaml'
+    consortiumItems:
+      $ref: 'schemas/search/consortiumItems.yaml'
   parameters:
     mediatedRequestId:
       name: mediatedRequestId
