MODREQMED-18: Mediated request confirmation (#21)
* MODREQMED-18 Mediated request confirmation

* MODREQMED-18 Update required interface versions

* MODREQMED-18 More tests

* MODREQMED-18 Remove integration with mod-search

* MODREQMED-18 Remove integration with mod-search

* MODREQMED-18 Remove commented code, minor fixes

* MODREQMED-18 Fin NPE when getting itemId

* MODREQMED-18 Fix system user setup

* MODREQMED-18 Add missing system user permission

* MODREQMED-18 Search items through mod-search

* MODREQMED-18 Fix tests

* MODREQMED-18 Add missing permission

* MODREQMED-18 Minor optimizations

* MODREQMED-18 WireMock mappings refactoring

* MODREQMED-18 Add environment variables to ModuleDescriptor and README

* MODREQMED-18 Remove redundant imports

* MODREQMED-18 Extract interface for SearchService

* MODREQMED-18 Rename SearchService implementation class

* MODREQMED-18 Move methods up

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,12 @@ folio:
       enabled: true
   environment: ${ENV:folio}
   okapi-url: ${OKAPI_URL:http://okapi:9130}
+  system-user:
+    enabled: ${SYSTEM_USER_ENABLED:true}
+    username: ${SYSTEM_USER_NAME:mod-requests-mediated}
+    password: ${SYSTEM_USER_PASSWORD:mod-requests-mediated}
+    lastname: System
+    permissionsFilePath: permissions/mod-requests-mediated.csv
 management:
   endpoints:
     web:
